# esp32-audio-synth

./: README.md  esp32-synth-joined.code-workspace
common/button/: CMakeLists.txt  button.cpp
common/button/include/: button.hpp
common/knob/: CMakeLists.txt
common/knob/src/: knob.cpp
common/midi/: CMakeLists.txt
common/midi/include/: midi_module.hpp
common/midi/src/: midi_module.cpp
common/protocol/: CMakeLists.txt
common/protocol/include/: audio_config.hpp  bpm_settings.hpp  (+15 more)
common/rotary_pcnt/: rotary.cpp
esp32s3-synth/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
esp32s3-synth-ui/: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig.defaults
esp32s3-synth-ui/main/: CMakeLists.txt  config.hpp  create_send_events.hpp  main.cpp  mapping.hpp  render.hpp  rotary_mapping.hpp
esp32s3-synth-ui/scripts/: autobuild.sh  autoflash.sh
esp32s3-synth/components/lfo/: CMakeLists.txt
esp32s3-synth/components/lfo/include/: cached_lfo.hpp  lfo.hpp
esp32s3-synth/components/lfo/src/: cached_lfo.cpp  lfo.cpp
esp32s3-synth/components/lookup/: CMakeLists.txt
esp32s3-synth/components/lookup/include/: cent_pitch_table.hpp  lookup.hpp  noise_table.hpp  note_freq_table.hpp  pan_table.hpp  saw_tooth_table.hpp  sine_table.hpp  square_table.hpp  stereo.hpp  triangle_table.hpp
esp32s3-synth/main/: CMakeLists.txt  config.hpp  main.cpp  synth_config.hpp
esp32s3-synth/scripts/: autobuild.sh  autoflash.sh  formattext.txt  gen_square.py  generate_filter_bp12.py  generate_filter_hp12.py  generate_filter_lp12.py  generate_filter_notch.py  list.sh  trace.txt
(+168 files in other folders)
